--- a/SalesManager-master/SalesManager/Pages/NhapHangMoi.xaml
+++ b/SalesManager-master/SalesManager/Pages/NhapHangMoi.xaml
@@ -6,7 +6,8 @@
       xmlns:local="clr-namespace:SalesManager"
       mc:Ignorable="d" 
       xml:lang="vi-VN"
-      d:DesignHeight="800" d:DesignWidth="1200"
+
+      Loaded="BasePage_Loaded"
       Title="NhapHangMoi">
 
     <Grid>
@@ -14,7 +15,7 @@
             <Border Height="50"
                     Margin="20 10 20 10"
                     CornerRadius="20" x:Name="Title">
-            <TextBlock 
+                <TextBlock 
                 TextWrapping="Wrap" 
                 Text="NHẬP THÊM HÀNG VÀO KHO"
                 VerticalAlignment="Center" 
@@ -35,15 +36,16 @@
                     HorizontalAlignment="Left"
                     Grid.Column="1"
                     TextWrapping="Wrap"
-                    Text="Mã hàng"
+                    Text="Quét Barcode"
                     VerticalAlignment="Center"
                     FontSize="24" 
                     Margin="23.6,14,0,14.6" 
                     Foreground="#FF1DB7A4"
                     />
                 <TextBox x:Name="text_GoodsCode" 
-                    Grid.ColumnSpan="2"
+                    Grid.ColumnSpan="1"
                     Grid.Column="2"
+                    TextChanged="text_GoodsCode_TextChanged"
                     MaxLength="4"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
@@ -51,9 +53,15 @@
                     TextWrapping="Wrap"
                     FontSize="24"
                     Width="520"
+                    IsEnabled="{Binding ElementName=cb_UseGoodsCode, Path=IsChecked}"
                     Margin="0,4,0,14.6" />
-                <CheckBox x:Name="cb_UseGoodsCode">
-                    Grid.Column="3"
+                <CheckBox x:Name="cb_UseGoodsCode"
+                          Grid.Column="3"
+                          Content="Use Barcode"
+                          HorizontalAlignment="Left"
+                          Foreground="Red"
+                          HorizontalContentAlignment="Left">
+
                 </CheckBox>
             </Grid>
             <Grid>
@@ -70,16 +78,20 @@
                     VerticalAlignment="Center"
                     FontSize="24" Margin="23.6,14,0,14.6" Foreground="#FF1DB7A4"
                     />
-                <ComboBox x:Name="comTenHang" 
+                <ComboBox x:Name="comTenHang"
                     Grid.ColumnSpan="2"
                     Grid.Column="2"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
                     Height="39"
                     FontSize="24"
-                    Width="520" IsEditable="True" DropDownClosed="comTenHang_DropDownClosed" TextInput="comTenHang_TextInput" />
+                    Width="520" 
+                    IsEditable="True" 
+                    DropDownClosed="comTenHang_DropDownClosed" 
+                    TextInput="comTenHang_TextInput"
+                    LostFocus="comTenHang_LostFocus"/>
             </Grid>
-            
+
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="63*"/>
@@ -101,27 +113,6 @@
                     Grid.Column="2" Height="43" Width="270" Grid.ColumnSpan="2"
                     />
 
-            </Grid>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="63*"/>
-                    <ColumnDefinition Width="208*"/>
-                    <ColumnDefinition Width="530*"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock
-                    HorizontalAlignment="Left"
-                    Grid.Column="1"
-                    TextWrapping="Wrap"
-                    Text="Hạn sử dụng"
-                    VerticalAlignment="Center"
-                    FontSize="24" Margin="23.6,14,0,14.6" Foreground="#FF1DB7A4"
-                    />
-                <DatePicker x:Name="HSD" 
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Top"
-                    FontSize="24"
-                    Grid.Column="2" Height="43" Width="270" Grid.ColumnSpan="2"
-                    />
             </Grid>
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -173,7 +164,7 @@
                     TextWrapping="Wrap"
                     FontSize="24"
                     MaxLength="9"
-                    Width="520" Margin="0,4,0,14.6" PreviewTextInput="Check_DonGia" LostFocus="textDonGia_LostFocus" GotFocus="textDonGia_GotFocus"/>
+                    Width="520" Margin="0,4,0,14.6" LostFocus="textDonGia_LostFocus"/>
             </Grid>
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -200,6 +191,83 @@
                     Width="180" Height="54" Margin="66.6,10,67,0" Click="NhapHang_Click"/>
 
             </Grid>
+            
+            <StackPanel Margin="20">
+                <TextBox Width="300"
+                         Height="30"
+                         FontSize="20"
+                         HorizontalAlignment="Center"
+                         TextChanged="tb_Search_TextChanged"
+                         Name="tb_search">
+                <TextBox.Style>
+                    <Style TargetType="TextBox" xmlns:sys="clr-namespace:System;assembly=mscorlib">
+                        <Style.Resources>
+                            <VisualBrush x:Key="CueBannerBrush" AlignmentX="Left" AlignmentY="Center" Stretch="None">
+                                <VisualBrush.Visual>
+                                    <Label Content="Tìm kiếm theo tên hàng" Foreground="LightGray" />
+                                </VisualBrush.Visual>
+                            </VisualBrush>
+                        </Style.Resources>
+                        <Style.Triggers>
+                            <Trigger Property="Text" Value="{x:Static sys:String.Empty}">
+                                <Setter Property="Background" Value="{StaticResource CueBannerBrush}" />
+                            </Trigger>
+                            <Trigger Property="Text" Value="{x:Null}">
+                                <Setter Property="Background" Value="{StaticResource CueBannerBrush}" />
+                            </Trigger>
+                            <Trigger Property="IsKeyboardFocused" Value="True">
+                                <Setter Property="Background" Value="White" />
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </TextBox.Style>
+            </TextBox>
+
+            <ListView Margin="20,50,40,60" Name="lvGoods" FontSize="20" Height="500" Width="1500">
+                <ListView.Resources>
+                    <Style TargetType="ListViewItem">
+                        <Style.Triggers>
+                            <Trigger Property="IsKeyboardFocusWithin" Value="True">
+                                <Setter Property="IsSelected" Value="True"/>
+                            </Trigger>
+                        </Style.Triggers>
+                        <EventSetter Event="PreviewGotKeyboardFocus" Handler="ListViewItem_PreviewGotKeyboardFocus"/>
+                        <Setter Property="Height" Value="30" />
+                        <Setter Property="BorderBrush" Value="Blue"/>
+                        <Setter Property="BorderThickness" Value="1"/>
+                        <Setter Property="Background" Value="#E7F8FE"/>
+                    </Style>
+                    <Style TargetType="{x:Type GridViewColumnHeader}">
+                        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                        <Setter Property="Focusable" Value="false"/>
+                    </Style>
+                </ListView.Resources>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListViewItem}">
+                        <EventSetter Event="MouseDoubleClick"  Handler="ListViewItem_MouseDoubleClick"/>
+                    </Style>
+                </ListView.ItemContainerStyle>
+                <ListView.View>
+                    <GridView >
+                        <GridViewColumn Header = "ID" DisplayMemberBinding = "{Binding ID}" Width = "100"></GridViewColumn>
+                        <GridViewColumn Header = "Mã Hàng" DisplayMemberBinding = "{Binding Code}" Width = "200"></GridViewColumn>
+                        <GridViewColumn Header = "Tên hàng" DisplayMemberBinding = "{Binding Name}" Width = "150"></GridViewColumn>
+                            <GridViewColumn Header = "Ngày nhập" DisplayMemberBinding = "{Binding InputDate, StringFormat='yyyy-MM-dd'}" Width = "250"></GridViewColumn>
+                            <GridViewColumn Header = "Loại hàng" DisplayMemberBinding = "{Binding GoodsType}" Width = "150"></GridViewColumn>
+                            <GridViewColumn Header = "Số lượng" DisplayMemberBinding = "{Binding Count}" Width = "150"></GridViewColumn>
+                            <GridViewColumn Header = "Đơn giá" DisplayMemberBinding = "{Binding PriceText}" Width = "150"></GridViewColumn>
+                         
+                            <GridViewColumn Header = "Thực hiện">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Content="Xóa" Click="Button_Delete_Click" Height="25" Width="60" VerticalAlignment="Center"/>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </local:BasePage>
